--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="">
-    <meta name="keywords" content="Venom, Marvel, Villan">
+    <meta name="keywords" content="Samurai, fighting, for honor">
     <meta name="author" content="Isaiah Cruz">
     <title>For Honor</title>
     <link href="https://fonts.googleapis.com/css?family=Gugi|Raleway" rel="stylesheet">
@@ -20,20 +20,20 @@
     <nav class="nav-bar">
         <img class="logo" src="img/logo.jpg"
         alt="image of a demon samurai"/>
-        <ul>
-            <li class="list-item"><a href="" target="_blank">Home</a></li>
-            <li class="list-item"><a href="" target="_blank">About</a></li>
-            <li class="list item"><a href="" target="_blank">Contact</a></li>
+        <ul class="nav-list">
+            <li class="list-item"><a href="index.html">Home</a></li>
+            <li class="list-item"><a href="about.html">About</a></li>
+            <li class="list-item"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 
 <!---------------------End Of Nav Bar--------------------------------->
-    <div class="hero-img"></div>
+    <section class="hero-img"></section>
        <div class="container">
            <h1 class="hero-text">The Samurai</h1>
        </div>
-    <section class="col-container">
+    <div class="col-container">
         <div class="column one">
             <img class="fight"src="img/samfight.jpg" alt=" two samurais fight"/>
             <p class="ptext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate eius molestias nulla consequuntur eveniet temporibus blanditiis eligendi reiciendis, at officiis aut, alias recusandae autem distinctio quam vero. Provident porro quia necessitatibus quibusdam dolore error labore est, architecto in veniam minus veritatis nisi, ea animi blanditiis, nesciunt alias, neque cupiditate atque.
@@ -42,7 +42,7 @@
         <div class="column two">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla numquam quia nobis maxime quod sed libero quo reiciendis distinctio, laborum modi et, dignissimos, debitis, doloremque vero sapiente est pariatur labore quibusdam esse veniam temporibus. Quod esse animi doloremque facere dolorum est temporibus, reiciendis quo quibusdam! Blanditiis reiciendis pariatur, quia voluptates.
             </p>
-            <img src="img/samstanding.jpg" alt="posing"/>
+            <img class="samstanding" src="img/samstanding.jpg" alt="posing"/>
         </div>
     </section>
     
